Adjust the FAQ component to prevent overflow
The text and icon collided due to large font-sizes and non-breakable words

--- a/drupal/web/themes/custom/camp/css/camp.main.css
+++ b/drupal/web/themes/custom/camp/css/camp.main.css
@@ -2064,6 +2064,17 @@ a.btn, .infomercial-call-ta a, .partners__links a {
   background-color: #f8f8f8;
 }
 
+@media screen and (max-width: 1024px) {
+  .accordion__header {
+    font-size: 14px;
+    white-space: initial;
+  }
+}
+
+.accordion__header__title {
+  width: 90%;
+}
+
 .accordion__content {
   display: none;
   position: relative;
